opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/httpcats"
dev-repo: "git+https://github.com/robur-coop/httpcats.git"
bug-reports: "https://github.com/robur-coop/httpcats/issues"
license: "BSD-3-clause"

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.8.0"}
  "logs" {with-test}
  "miou" {>= "0.4.0"}
  "fmt" {>= "0.9.0" & with-test}
  "h2" {>= "0.13.0"}
  "h1" {>= "1.1.0"}
  "ca-certs"
  "bstr"
  "tls-miou-unix" {>= "1.0.1"}
  "dns-client-miou-unix" {>= "9.0.0"}
  "happy-eyeballs-miou-unix"
  "mirage-crypto-rng-miou-unix" {with-test & >= "1.1.0"}
  "alcotest" {>= "1.8.0" & with-test}
  "digestif" {with-test & >= "1.2.0"}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "A simple HTTP client / server using h1, h2, and miou"
available: [ arch != "x86_32" ]
