(executable
 (name main)
 (modules main)
 (libraries logs.threaded logs.fmt fmt.tty mirage-crypto-rng.unix hxd.string
   hxd.core dns_miou httpcats))

(executable
 (name pars)
 (modules pars)
 (libraries duration fmt.tty logs.fmt logs.threaded mirage-crypto-rng.unix
   httpcats dns_miou happy progress))
