(library
 (name httpcats)
 (public_name httpcats)
 (modules flow runtime http_miou_unix http_miou_client http_miou_server
   httpcats tls_miou)
 (libraries ca-certs httpaf h2 httpcats.happy tls miou miou.unix))

(library
 (name happy)
 (public_name httpcats.happy)
 (modules happy dns_miou)
 (foreign_stubs
  (language c)
  (names happy)
  (flags (:standard)))
 (wrapped false)
 (libraries mtime.clock.os ipaddr.unix mirage-crypto-rng happy-eyeballs dns
   dns-client miou miou.unix))
