(library
 (name runtime)
 (public_name httpcats.runtime)
 (modules runtime flow)
 (libraries fmt logs faraday miou bstr))

(library
 (name httpcats)
 (public_name httpcats)
 (modules
  httpcats
  http_miou_unix
  http_miou_client
  http_miou_server
  cookie
  bstream)
 (libraries
  httpcats.runtime
  ca-certs
  happy-eyeballs-miou-unix
  dns-client-miou-unix
  h1
  h2
  bstr
  tls-miou-unix))
